<resources>
    <string name="app_name">SimpleConverter</string>
    <string name="units">Units</string>
    <string name="formulas">Formulas</string>

    <string name="hint_enter_value">Enter number</string>
    <string name="button_convert">Convert</string>
    <string name="text_result">Result</string>
    <string name="back">Back\n</string>

    <string name="copy_result_hint">Tap the result to copy</string>

    <string name="hint_enter_value_toast">Enter a number</string>
    <string name="hint_enter_second_value_toast">Enter the second number</string>
    <string name="result_copied">Result copied</string>

    <string-array name="units_list">
        <item>Meters → Centimeters</item>
        <item>Centimeters → Meters</item>
        <item>Minutes → Seconds</item>
        <item>Seconds → Minutes</item>
    </string-array>

    <string-array name="formulas_list">
        <item>Square Area</item>
        <item>Square Perimeter</item>
        <item>Rectangle Area</item>
        <item>Rectangle Perimeter</item>
    </string-array>

</resources>
